--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.7.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
