--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8484
 
 
 #database properties:
-spring.datasource.url=jdbc:postgresql://localhost:5432/dummy
+spring.datasource.url=jdbc:postgresql://localhost:5432/Dummy
 spring.datasource.username=postgres
 spring.datasource.password=root
 
@@ -14,3 +14,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+
+# debug logs
+
+logging.level.org.springframework=DEBUG
+logging.file.name=  file.name: D:/cloud/confluence_exporter_debug/vessel.log
